Added sqlite3 to project to test vcpkg x64-mingw build

--- a/executable/ravtest/CMakeLists.txt
+++ b/executable/ravtest/CMakeLists.txt
@@ -1,1 +1,4 @@
 add_executable(ravtest src/main.cpp)
+find_package(unofficial-sqlite3 CONFIG REQUIRED)
+
+target_link_libraries(ravtest PRIVATE unofficial::sqlite3::sqlite3)
