--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall")
 include(CTest)
 enable_testing()
 
+add_subdirectory(libs)
 add_subdirectory(executable)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
