Added base64 and sdl2_image
1. base64 decoder / encoder and toBase64 executable added.
It is possible to put in source file any file from disk base64 encoded.
This way we can avoid IO operation in UT to test image decoders.

2. added sdl2 image decoder.
Basic decoder. Little stupid and not performance optimized.
But a lot formats are supported.
There are still BMP and TGA decoders.
Added UT to test decoders for files: BMP, TGA, PNG

--- a/libs/importer/CMakeLists.txt
+++ b/libs/importer/CMakeLists.txt
@@ -3,6 +3,7 @@ set(MODULE_NAME importer)
 set(SOURCES 
     src/bmp.cpp
     src/tga.cpp
+    src/sdl.cpp
 )
 
 set(HEADERS 
@@ -16,7 +17,10 @@ target_include_directories(${MODULE_NAME} PUBLIC include)
 target_link_libraries(${MODULE_NAME} 
     PUBLIC
         # bps::config              # exposed as public, so ut don't need to add it in target_link_libraries
-    # PRIVATE 
-        bps::common)
+        bps::common
+
+    PRIVATE
+        SDL2::SDL2_image
+    )
 
 add_subdirectory(ut)
