--- a/libs/common/CMakeLists.txt
+++ b/libs/common/CMakeLists.txt
@@ -4,17 +4,25 @@ set(SOURCES
     src/base64.cpp
     src/Image.cpp
     src/MemoryBuffer.cpp
+    src/Logger.cpp
 )
 
 set(HEADERS 
     include/common/types.hpp
-    # include/common/MemoryBuffer.hpp
+    include/common/MemoryBuffer.hpp
     include/tools/base64.hpp
     include/common/Image.hpp
+    include/common/Logger.hpp
 )
 
 add_library(${MODULE_NAME} STATIC ${SOURCES} ${HEADERS}) 
-target_include_directories(${MODULE_NAME} PUBLIC include)
 add_library(bps::${MODULE_NAME} ALIAS ${MODULE_NAME})
+
+target_include_directories(${MODULE_NAME} PUBLIC include)
+target_link_libraries(${MODULE_NAME} 
+    PUBLIC
+    PRIVATE
+        fmt::fmt
+)
 
 add_subdirectory(ut)
