--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,21 +20,15 @@ find_package(GTest CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 find_package(sdl2-image CONFIG REQUIRED)
 find_package(glfw3 CONFIG REQUIRED)
-
-enable_testing()
-include(CTest)
+find_path(VULKAN_HEADERS_INCLUDE_DIRS "vk_video/vulkan_video_codec_h264std.h")
 
 set(LOG_LEVEL_TRACE 0)
 set(LOG_LEVEL_DEBUG 1)
 set(LOG_LEVEL_INFO 2)
-add_compile_definitions(LOG_LEVEL LOG_LEVEL_DEBUG)
+add_compile_definitions(LOG_LEVEL LOG_LEVEL_TRACE)
 
 add_subdirectory(libs)
 add_subdirectory(executable)
-
-set(CPACK_PROJECT_NAME ${PROJECT_NAME})
-set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
-include(CPack)
 
 # notes:
 #vulkan?
