Added few logger and to vector UTs.

--- a/libs/common/ut/CMakeLists.txt
+++ b/libs/common/ut/CMakeLists.txt
@@ -2,6 +2,8 @@ set(This ${MODULE_NAME}_test) # will be client_test. MODULE_NAME is defined in p
 
 set(TESTSRC
     src/base64_tests.cpp
+    src/to_vector_tests.cpp
+    src/logger_tests.cpp
 )
 
 add_executable(${This} ${TESTSRC})
