Vk renderingEngine fixed dependency and cleanup.
Fixed order of objects destructions - vk validation
layer don't complain.
Moved common members to IRenderingEngine.
LogicalDevice and PhysicalDevice` creation works.

--- a/libs/common/CMakeLists.txt
+++ b/libs/common/CMakeLists.txt
@@ -15,6 +15,7 @@ set(HEADERS
     include/tools/contains.hpp
     include/common/Image.hpp
     include/common/Logger.hpp
+    include/common/Rect2D.hpp
 )
 
 add_library(${MODULE_NAME} STATIC ${SOURCES} ${HEADERS}) 
