--- a/libs/renderingEngine/CMakeLists.txt
+++ b/libs/renderingEngine/CMakeLists.txt
@@ -8,29 +8,40 @@ set(HEADERS
 set(SOURCES 
     src/glfw.cpp
     src/renderingEngine.cpp
+    src/impl/CommandBuffers.cpp
+    src/impl/CommandBuffers.hpp
     src/impl/CommandPools.cpp
     src/impl/CommandPools.hpp
+    src/impl/Context.cpp
+    src/impl/Context.hpp
+    src/impl/DefferedRenderPass.cpp
+    src/impl/DefferedRenderPass.hpp
+    src/impl/DescriptorSetManager.cpp
+    src/impl/DescriptorSetManager.hpp
+    src/impl/ForwardRenderPass.cpp
+    src/impl/ForwardRenderPass.hpp
+    src/impl/FrameBufferAttachment.cpp
+    src/impl/FrameBufferAttachment.hpp
     src/impl/GlfwImpl.cpp
     src/impl/GlfwImpl.hpp
-    src/impl/FrameBufferAttachment.hpp
-    src/impl/FrameBufferAttachment.cpp
     src/impl/IRenderingEngine.hpp
     src/impl/LogicalDevice.cpp
     src/impl/LogicalDevice.hpp
     src/impl/OutputWindow.cpp
     src/impl/OutputWindow.hpp
-    src/impl/OutputWindowContext.cpp
-    src/impl/OutputWindowContext.hpp
     src/impl/PhysicalDevice.cpp
     src/impl/PhysicalDevice.hpp
+    src/impl/PipelineStatistic.cpp
+    src/impl/PipelineStatistic.hpp
     src/impl/QueueFamilyIndices.cpp
     src/impl/QueueFamilyIndices.hpp
     src/impl/RenderingEngineImpl.cpp
     src/impl/RenderingEngineImpl.hpp
-    src/impl/RenderPass.cpp
     src/impl/RenderPass.hpp
     src/impl/Semaphores.cpp
     src/impl/Semaphores.hpp
+    src/impl/SharedUniformBufferObject.cpp
+    src/impl/SharedUniformBufferObject.hpp
     src/impl/Surface.cpp
     src/impl/Surface.hpp
     src/impl/SwapChain.cpp
@@ -54,6 +65,7 @@ target_link_libraries(${MODULE_NAME}
         # SDL2::SDL2_image
         glfw
         Vulkan::Vulkan
+        glm::glm
     )
 
 add_subdirectory(ut)
