Working on shaderReflections
Test shader compilation

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(common)
 add_subdirectory(importer)
+add_subdirectory(shaders)
 add_subdirectory(engine)
 add_subdirectory(renderingEngine)
