--- a/libs/renderingEngine/CMakeLists.txt
+++ b/libs/renderingEngine/CMakeLists.txt
@@ -43,6 +43,10 @@ set(SOURCES
     src/impl/RenderPass.hpp
     src/impl/Semaphores.cpp
     src/impl/Semaphores.hpp
+    src/impl/ShaderProgram.hpp
+    src/impl/ShaderProgram.cpp
+    src/impl/ShaderReflections.hpp
+    src/impl/ShaderReflections.cpp
     src/impl/SharedUniformBufferObject.cpp
     src/impl/SharedUniformBufferObject.hpp
     src/impl/Surface.cpp
@@ -73,6 +77,9 @@ target_link_libraries(${MODULE_NAME}
         glm::glm
         imgui::imgui
         Vulkan::Vulkan
+        spirv-cross-core
+        spirv-cross-glsl
+        spirv-cross-reflect
     )
 
 add_subdirectory(ut)
