--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,31 +18,17 @@ set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -Werror=reorde
 
 find_package(GTest CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
-find_package(sdl2 CONFIG REQUIRED)
-find_package(sdl2-image CONFIG REQUIRED)
+find_package(SDL2_image CONFIG REQUIRED)
+find_package(SDL2 CONFIG REQUIRED)
 find_package(glfw3 CONFIG REQUIRED)
 find_package(Vulkan REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(imgui CONFIG REQUIRED)
-find_package(glslang CONFIG REQUIRED)
-
-# find_package(spirv_cross_c CONFIG REQUIRED)
 find_package(spirv_cross_core CONFIG REQUIRED)
-# find_package(spirv_cross_cpp CONFIG REQUIRED)
 find_package(spirv_cross_glsl CONFIG REQUIRED)
-# find_package(spirv_cross_hlsl CONFIG REQUIRED)
-# find_package(spirv_cross_msl CONFIG REQUIRED)
 find_package(spirv_cross_reflect CONFIG REQUIRED)
 # find_package(spirv_cross_util CONFIG REQUIRED)
-
-# target_link_libraries(main PRIVATE spirv-cross-c)
-# target_link_libraries(main PRIVATE spirv-cross-core)
-# target_link_libraries(main PRIVATE spirv-cross-cpp)
-# target_link_libraries(main PRIVATE spirv-cross-glsl)
-# target_link_libraries(main PRIVATE spirv-cross-hlsl)
-# target_link_libraries(main PRIVATE spirv-cross-msl)
-# target_link_libraries(main PRIVATE spirv-cross-reflect)
-# target_link_libraries(main PRIVATE spirv-cross-util)
+find_package(glslang CONFIG REQUIRED)
 
 set(LOG_LEVEL_TRACE 0)
 set(LOG_LEVEL_DEBUG 1)
