--- a/libs/common/CMakeLists.txt
+++ b/libs/common/CMakeLists.txt
@@ -1,13 +1,14 @@
 set(MODULE_NAME common)
 
-set(SOURCES 
+set(SOURCES
     src/base64.cpp
     src/Image.cpp
     src/MemoryBuffer.cpp
     src/Logger.cpp
 )
 
-set(HEADERS 
+set(HEADERS
+    include/common/enumFormatter.hpp
     include/common/Image.hpp
     include/common/Logger.hpp
     include/common/MemoryBuffer.hpp
@@ -20,11 +21,11 @@ set(HEADERS
     include/tools/writeFile.hpp
 )
 
-add_library(${MODULE_NAME} STATIC ${SOURCES} ${HEADERS}) 
+add_library(${MODULE_NAME} STATIC ${SOURCES} ${HEADERS})
 add_library(bps::${MODULE_NAME} ALIAS ${MODULE_NAME})
 
 target_include_directories(${MODULE_NAME} PUBLIC include)
-target_link_libraries(${MODULE_NAME} 
+target_link_libraries(${MODULE_NAME}
     PUBLIC
         fmt::fmt
     PRIVATE
